@startuml

class Educator {
  -id: UUID
  -name: String
  -email: String
  -password: String
  -createdAt: Timestamp
  
  +createQuiz(title: String, description: String): Quiz
  +updateProfile(name: String, email: String, password: String): void
}

class Quiz {
  -id: UUID
  -title: String
  -description: String
  -createdAt: Timestamp
  -educatorId: UUID

  +addQuestion(question: Question): void
  +startMatch(): Match
}

class Question {
  -id: UUID
  -type: String
  -question: String
  -timeLimit: Integer
  -createdAt: Timestamp
  -quizId: UUID

  +addAlternative(answer: String, correct: Boolean): void
}

class QuestionQuizAlternative {
  -id: UUID
  -questionId: UUID
  -answer: String
  -correct: Boolean
  -createdAt: Timestamp
}

class Match {
  -id: UUID
  -quizId: UUID
  -pin: String
  -state: String
  -createdAt: Timestamp

  +addParticipant(nickname: String): Participant
  +start(): void
  +pause(): void
  +end(): void
}

class Participant {
  -id: UUID
  -nickname: String
  -matchId: UUID

  +answerQuestion(questionId: UUID, alternative: String): QuizAnswer
}

class QuizAnswer {
  -id: UUID
  -participantId: UUID
  -questionId: UUID
  -matchId: UUID
  -alternative: String
}

Educator "1" -- "0..*" Quiz : creates >
Quiz "1" -- "0..*" Question : contains >
Question "1" -- "0..*" QuestionQuizAlternative : has >
Quiz "1" -- "0..*" Match : usedIn >
Match "1" -- "0..*" Participant : has >
Participant "1" -- "0..*" QuizAnswer : submits >
Question "1" -- "0..*" QuizAnswer : answeredBy >
Match "1" -- "0..*" QuizAnswer : includes >

@enduml
